unpackaged/main/default/objects/School_Transport_Company_Detail__c/School_Transport_Company_Detail__c.object-meta.xml
<CustomObject>
    <label>School Transport Company Detail</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>School Transport Company Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>