unpackaged/main/default/objects/School_Transport_Company_Detail__c/fields/Company_Branch__c.field-meta.xml
<CustomField>
    <fullName>Company_Branch__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Branch</label>
    <length>18</length>
    <type>Text</type>
</CustomField>