unpackaged/main/default/objects/School_Transport_Company_Detail__c/fields/Number_of_Buses_Operating__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Buses_Operating__c</fullName>
    <label>Number of Buses Operating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>