unpackaged/main/default/objects/School_Transport_Company_Detail__c/fields/Report_Number__c.field-meta.xml
<CustomField>
    <fullName>Report_Number__c</fullName>
    <label>Report Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>