unpackaged/main/default/objects/School_Transport_Company_Detail__c/fields/Station__c.field-meta.xml
<CustomField>
    <fullName>Station__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Station</label>
    <length>18</length>
    <type>Text</type>
</CustomField>