unpackaged/main/default/objects/School_Transport_Company_Detail__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>To</label>
    <type>DateTime</type>
</CustomField>