unpackaged/main/default/objects/School_Transport_Company_Detail__c/fields/Transferred_Students_Count__c.field-meta.xml
<CustomField>
    <fullName>Transferred_Students_Count__c</fullName>
    <label>Transferred Students Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>