unpackaged/main/default/objects/School_Transport_Company_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company_Branch__c</columns>
    <columns>Number_of_Buses_Operating__c</columns>
    <columns>Transferred_Students_Count__c</columns>
    <columns>School_District__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>